# ranboard

./: README.md  main.py  main.spec  pyproject.toml
modules/: config.py  screenManager.py
