[project]
name = "ranboard"
version = "0.2.0"
description = "A simple soundboard app for playing random sounds"
authors = [
    {name = "Juke"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "keyboard (>=0.13.5,<0.14.0)",
    "sounddevice (>=0.5.2,<0.6.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "pywinstyles (>=1.8,<2.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
